[workspace]

members = [
    # lessons
    "lessons/hello_world",
    "lessons/scalar_types",
    "lessons/collections",
    "lessons/objects",
    "lessons/enums",
    "lessons/flow_control",
    "lessons/functions",
    "lessons/errors",
    "lessons/testing",
    "lessons/methods",
    "lessons/modularity",
    "lessons/imports",
    "lessons/pointers",
    "lessons/interfaces",
    "lessons/generics",
    "lessons/files",
]
